# storygenerator

./: LICENSE  README.md  app.py  prompts.py  pyproject.toml
static/css/: style.css
static/js/: main.js
templates/: index.html
